# screen-recorder

./: .gitignore  Cargo.toml
data/: dev.local.ScreenRecord.desktop  style.css
scripts/: install.sh  package-release.sh  run.sh
src/: main.rs
src/config/: mod.rs  settings.rs
src/portal/: mod.rs  screencast.rs  state.rs
src/recorder/: audio.rs  encoders.rs  mod.rs  output.rs  pipeline.rs
src/transcription/: mod.rs  queue.rs
src/ui/: events.rs  mod.rs  preferences.rs  shell.rs  style.rs  window.rs
src/ui/overlays/: countdown.rs  floating_toolbar.rs  mod.rs
src/ui/pages/: library.rs  mod.rs  post_record.rs  record.rs  recording_detail.rs  settings.rs
